Source/WebKit/mac/WebView/WebViewData.h
@@ -84,6 +84,10 @@ class TextIndicatorWindow;
 class WebMediaPlaybackTargetPicker;
 #endif
 
+#if PLATFORM(MAC)
+@class WebWindowVisibilityObserver;
+#endif
+
 extern BOOL applicationIsTerminating;
 extern int pluginDatabaseClientCount;
 
@@ -125,6 +129,15 @@ private:
     WebViewLayerFlushScheduler m_layerFlushScheduler;
 };
 
+@interface WebWindowVisibilityObserver : NSObject {
+    WebView *_view;
+}
+
+- (instancetype)initWithView:(WebView *)view;
+- (void)startObserving:(NSWindow *)window;
+- (void)stopObserving:(NSWindow *)window;
+@end
+
 // FIXME: This should be renamed to WebViewData.
 @interface WebViewPrivate : NSObject {
 @public
@@ -159,6 +172,7 @@ private:
 #endif // __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
     std::unique_ptr<WebCore::TextIndicatorWindow> textIndicatorWindow;
     BOOL hasInitializedLookupObserver;
+    RetainPtr<WebWindowVisibilityObserver> windowVisibilityObserver;
 #endif // PLATFORM(MAC)
 
     BOOL shouldMaintainInactiveSelection;
